dark mode fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -747,6 +747,10 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mt-52 {
+  margin-top: 13rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -757,10 +761,6 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
-}
-
-.mt-52 {
-  margin-top: 13rem;
 }
 
 .block {
@@ -1007,6 +1007,20 @@ video {
 .bg-main {
   --tw-bg-opacity: 1;
   background-color: rgb(92 239 250 / var(--tw-bg-opacity));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-\[\#4f9ff5\] {
+  --tw-gradient-from: #4f9ff5;
+  --tw-gradient-to: rgb(79 159 245 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#5ceffa\] {
+  --tw-gradient-to: #5ceffa;
 }
 
 .object-cover {
@@ -1349,11 +1363,6 @@ video {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1449,11 +1458,6 @@ video {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .md\:text-2xl {
